--- a/css/main.css
+++ b/css/main.css
@@ -3,18 +3,135 @@
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+#page_content{
+	margin-left: 80px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+#side_nav,
+.post_panel {
+	height: 100%;
+	position: fixed;
+	top:0;
+	z-index: 10;
+	background: #ccc;
+	width: 80px;
+}
+#side_nav > ul{
+	list-style: none;
+	padding: 0;
+	bottom: 0;
+	position: absolute;
+	top: 0;
+}
+#side_nav,
+#side_nav > ul {
+	background: #363f44;
+	left: 0;
+	width: 80px;
+}
+#side_nav > ul > li{
+	display: block;
+}
+#side_nav > ul > li > a{
+	color: rgba(255, 255, 255, 0.75);
+	font-size: 32px;
+	display: block;
+	outline: none;
+	padding: 5px 0;
+	position: relative;
+	text-align: center;
+	text-decoration: none !important;
+}
+#side_nav .nav_title{
+	font-size: 11px;
+	text-align: center;
+	display: block;
+}
+.post_panel{
+	width: 30%;
+	background: #f5f6f7;
+	left: 80px;
+	padding-top: 15px;
+}
+.post_panel .post_form{
+	margin-bottom: 10px;
+}
+.post_panel .btn-group{
+	width: 100%;
+	margin-bottom: 15px;
+}
+.post_panel .btn-group .col-md-8{
+	padding:0;
+}
+.post_panel .nav-stacked li a{
+	line-height: 200%;
+}
+.post_panel .nav-pills>li>a{
+	border-radius: 0;
+}
+.post_panel .accounts {
+	clear: both;
+}
+/****CheckBox Style******/
+.squaredOne {
+	width: 28px;
+	height: 28px;
+	float: left;
+	margin:0 10px 0  0 !important;
+	margin: 20px auto;
+	position: relative;
+}
+.squaredOne label {
+	cursor: pointer;
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	left: 4px;
+	top: 4px;
+	-webkit-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+	-moz-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+	box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+	background: -webkit-linear-gradient(top, #222 0%, #45484d 100%);
+	background: -moz-linear-gradient(top, #222 0%, #45484d 100%);
+	background: -o-linear-gradient(top, #222 0%, #45484d 100%);
+	background: -ms-linear-gradient(top, #222 0%, #45484d 100%);
+	background: linear-gradient(top, #222 0%, #45484d 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#222', endColorstr='#45484d',GradientType=0 );
+}
+.squaredOne label:after {
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	filter: alpha(opacity=0);
+	opacity: 0;
+	content: '';
+	position: absolute;
+	width: 16px;
+	height: 16px;
+	background: #00bf00;
+	background: -webkit-linear-gradient(top, #00bf00 0%, #009400 100%);
+	background: -moz-linear-gradient(top, #00bf00 0%, #009400 100%);
+	background: -o-linear-gradient(top, #00bf00 0%, #009400 100%);
+	background: -ms-linear-gradient(top, #00bf00 0%, #009400 100%);
+	background: linear-gradient(top, #00bf00 0%, #009400 100%);
+	top: 2px;
+	left: 2px;
+	-webkit-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+	-moz-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+	box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+}
+.squaredOne label:hover::after {
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+	filter: alpha(opacity=30);
+	opacity: 0.3;
+}
+.squaredOne input[type=checkbox]:checked + label:after {
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: alpha(opacity=100);
+	opacity: 1;
+}
+.squaredOne input[type=checkbox]{
+	visibility: hidden;
+}
+/****CheckBox Style******/
 
 
 
