--- a/css/main.css
+++ b/css/main.css
@@ -3,36 +3,36 @@
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-#page_content{
+#page-content{
 	margin-left: 80px;
 }
-
-#side_nav,
-.post_panel {
+#side-nav,
+.post-panel {
 	height: 100%;
 	position: fixed;
 	top:0;
-	z-index: 10;
+	z-index: 2;
 	background: #ccc;
 	width: 80px;
+	overflow: hidden;
 }
-#side_nav > ul{
+#side-nav > ul{
 	list-style: none;
 	padding: 0;
 	bottom: 0;
 	position: absolute;
 	top: 0;
 }
-#side_nav,
-#side_nav > ul {
+#side-nav,
+#side-nav > ul {
 	background: #363f44;
 	left: 0;
 	width: 80px;
 }
-#side_nav > ul > li{
+#side-nav > ul > li{
 	display: block;
 }
-#side_nav > ul > li > a{
+#side-nav > ul > li > a{
 	color: rgba(255, 255, 255, 0.75);
 	font-size: 32px;
 	display: block;
@@ -41,99 +41,145 @@
 	position: relative;
 	text-align: center;
 	text-decoration: none !important;
+	transition: all 200ms;
+	-moz-transition: all 200ms;
+	-webkit-transition: all 200ms;
 }
-#side_nav .nav_title{
+#side-nav > ul > li > a:hover,
+a.active{
+	background:#f5f6f7;
+	color: #363f44 !important;
+}
+#side-nav .nav-title{
 	font-size: 11px;
 	text-align: center;
 	display: block;
 }
-.post_panel{
+.post-panel{
 	width: 30%;
 	background: #f5f6f7;
 	left: 80px;
 	padding-top: 15px;
+	position: absolute;
+	left: -450px;
+	z-index: 1;
+	transition: left 0.5s;
+	-webkit-transition: left 0.5s; 
+	-moz-transition: left 0.5s; 
+	-o-transition: left 0.5s; 
+
 }
-.post_panel .post_form{
-	margin-bottom: 10px;
+.post-panel .post-form{
+	border-top: 1px dashed #ccc;
+	padding-bottom: 20px;
 }
-.post_panel .btn-group{
+.post-panel .btn-group{
 	width: 100%;
 	margin-bottom: 15px;
 }
-.post_panel .btn-group .col-md-8{
+.post-panel .btn-group .col-md-8{
 	padding:0;
 }
-.post_panel .nav-stacked li a{
+.post-panel .nav-stacked li a{
 	line-height: 200%;
 }
-.post_panel .nav-pills>li>a{
+.post-panel .nav-pills>li>a{
 	border-radius: 0;
 }
-.post_panel .accounts {
+.post-panel .accounts {
+	clear: both;
+	padding-top: 10px;
+	border-top:1px dashed #ccc;
+	height: auto;
+	overflow-y: scroll;
+}
+.accounts-filter{
 	clear: both;
 }
-/****CheckBox Style******/
-.squaredOne {
-	width: 28px;
-	height: 28px;
+.accounts-filter .nav-tabs{
+	padding-left: 15px;
+	border-bottom: none;
+}
+.accounts-filter .nav-tabs>li>a{
+	border-radius: 0;
+}
+.panel-active{
+	left: 80px;
+}
+.layout-changer{
+	margin-top: 5px;
+}
+.create-post.active .glyphicon-send:before {
+    content: "\e014";
+}
+.accounts > ul > li > a{
+	text-align: left;
+	padding-left: 30px;
+}
+.accounts > ul > li.active a{
+	color: #fff;
+}
+.accounts .acc-groups ul{
+	list-style: none;
+	overflow: hidden;
+	padding:10px 1px 10px 8px;
+}
+.accounts .acc-groups ul li,
+.selected-accounts ul li{
 	float: left;
-	margin:0 10px 0  0 !important;
-	margin: 20px auto;
+}
+.accounts .acc-groups ul li a{
+	width: 100%;
+	height: 100%;
+	display: block;
+	cursor: pointer;
+	text-align: center;
+	text-decoration: none;
+}
+.acc-groups .glyphicon{
+	display: block;
+}
+.acc-groups .thumbnail{
+	padding: 0;
+	margin-right: 3px;
+	margin-bottom: 10px;
 	position: relative;
 }
-.squaredOne label {
-	cursor: pointer;
+.accounts li i{
+	font-size: 21px;
+}
+.accounts li.facebook a{
+	color: #3b5998;
+}
+.accounts > ul > li.facebook.active a{ 
+	background: #3b5998;
+}
+.accounts li.twitter a{
+	color:#55acee;
+}
+.accounts > ul > li.twitter.active a{
+	background: #55acee;
+}
+.accounts li.gplus a{
+	color:#D34836;
+}
+.accounts > ul > li.gplus.active a{
+	background: #D34836;
+}
+.accounts li.youtube a{
+	color:#e52d27;
+}
+.accounts > ul > li.youtube.active a{
+	background: #e52d27;
+}
+.acc-groups ul li a i{
+	display: none;
+}
+.acc-groups ul li a.active i{
 	position: absolute;
-	width: 20px;
-	height: 20px;
-	left: 4px;
-	top: 4px;
-	-webkit-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
-	-moz-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
-	box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
-	background: -webkit-linear-gradient(top, #222 0%, #45484d 100%);
-	background: -moz-linear-gradient(top, #222 0%, #45484d 100%);
-	background: -o-linear-gradient(top, #222 0%, #45484d 100%);
-	background: -ms-linear-gradient(top, #222 0%, #45484d 100%);
-	background: linear-gradient(top, #222 0%, #45484d 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#222', endColorstr='#45484d',GradientType=0 );
-}
-.squaredOne label:after {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-	filter: alpha(opacity=0);
-	opacity: 0;
-	content: '';
-	position: absolute;
-	width: 16px;
-	height: 16px;
-	background: #00bf00;
-	background: -webkit-linear-gradient(top, #00bf00 0%, #009400 100%);
-	background: -moz-linear-gradient(top, #00bf00 0%, #009400 100%);
-	background: -o-linear-gradient(top, #00bf00 0%, #009400 100%);
-	background: -ms-linear-gradient(top, #00bf00 0%, #009400 100%);
-	background: linear-gradient(top, #00bf00 0%, #009400 100%);
-	top: 2px;
-	left: 2px;
-	-webkit-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
-	-moz-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
-	box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
-}
-.squaredOne label:hover::after {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
-	filter: alpha(opacity=30);
-	opacity: 0.3;
-}
-.squaredOne input[type=checkbox]:checked + label:after {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-	filter: alpha(opacity=100);
-	opacity: 1;
-}
-.squaredOne input[type=checkbox]{
-	visibility: hidden;
-}
-/****CheckBox Style******/
+	display: inline-block;
+	bottom: 0;
+	right: 0;
+	color: green;
 
-
-
-
-
+}
