--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,9 @@ a.active{
 	list-style: none;
 	overflow: hidden;
 	padding:10px 1px 10px 8px;
+	-webkit-transition: all 0.5s; 
+	-moz-transition: all 0.5s; 
+	-o-transition: all 0.5s;
 }
 .accounts .acc-groups ul li,
 .selected-accounts ul li{
@@ -153,29 +156,31 @@ a.active{
 .accounts li i{
 	font-size: 21px;
 }
-.accounts li.facebook a{
-	color: #3b5998;
-}
-.accounts > ul > li.facebook.active a{ 
+.accounts > ul > li.facebook.active a,
+.accounts li.facebook a
+{ 
 	background: #3b5998;
+  color: #fff;
+  margin-bottom: 5px;
 }
-.accounts li.twitter a{
-	color:#55acee;
-}
-.accounts > ul > li.twitter.active a{
+.accounts > ul > li.twitter.active a,
+.accounts li.twitter a
+{
 	background: #55acee;
+  color: #fff;
+  margin-bottom: 5px;
 }
+.accounts > ul > li.gplus.active a,
 .accounts li.gplus a{
-	color:#D34836;
-}
-.accounts > ul > li.gplus.active a{
 	background: #D34836;
+  color: #fff;
+  margin-bottom: 5px;
 }
+.accounts > ul > li.youtube.active a,
 .accounts li.youtube a{
-	color:#e52d27;
-}
-.accounts > ul > li.youtube.active a{
 	background: #e52d27;
+  color: #fff;
+  margin-bottom: 5px;
 }
 .acc-groups ul li  i,
 .acc-groups ul li.active i.fa-times{
@@ -196,11 +201,12 @@ a.active{
 	width: 30%;
 	left: -440px;
 	background: #e0e2e4;
-	z-index: 1;
+	z-index: 6;
 	padding: 1%;
 	-webkit-transition: left 0.5s; 
 	-moz-transition: left 0.5s; 
 	-o-transition: left 0.5s;
+	box-shadow: 5px 0 10px #888888;
 }
 .articles-active{
 	left:510px !important;
@@ -219,4 +225,337 @@ a.active{
 }
 .ui-helper-hidden-accessible{
 	display: none;
+}
+.feed-header{
+	background-image: -webkit-linear-gradient(top, #f5f5f5 0%, #e8e8e8 100%); 
+ 	background-image: linear-gradient(to bottom, #f5f5f5 0%, #e8e8e8 100%); 
+ 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
+	background-color: #f5f5f5;
+	border-color: #ddd;
+	border-top-right-radius: 3px;
+	border-top-left-radius: 3px;
+	margin: 5px 0;
+}
+.feed-header a{
+	text-align: center;
+	font-size: 16px;
+	font-weight: bold;
+}
+.web-feed,
+.web-feed ul{
+	overflow: hidden;
+}
+.web-feed ul{
+	padding: 0;
+	margin: 0;
+}
+.web-feed li{
+	float: right;
+	width: 100px;
+	text-align: right;
+	height: 180px;
+	overflow: hidden;
+	margin-bottom: 0;
+}
+.web-feed li h6{
+	margin: 3px 0;
+}
+/***TimeLine****/
+.feed-group{
+  padding-top: 20px;
+  width: 100%;
+}
+.feed-col{
+	position: absolute;
+  display: block;
+  overflow-x:scroll;
+  background: #fff;
+  width: 380px;
+  height: 700px;
+  left: 0;
+  top:0;
+  box-shadow: 1px 0px 5px #ccc;
+  -moz-box-shadow: 1px 0px 5px #ccc;
+  -webkit-box-shadow: 1px 0px 5px #ccc;
+  -webkit-transition: all 0.5s; 
+  -moz-transition: all 0.5s; 
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.feed-col  .page-header{
+  visibility: hidden;
+}
+.feed-col.active  .page-header{
+  visibility: visible;
+}
+.col-md-4{
+margin-right: 10px;
+padding:0;
+width: 380px;
+}
+.feed-col.active{
+  width: 600px;
+  height: 700px;
+  top: -30px;
+  left: -45px;
+  padding:10px;
+  z-index: 100;
+  box-shadow:0 0 5px #000;
+}
+.account-header{
+  position: relative;
+  z-index: 5;
+  background: #fff;
+  width: 100%;
+  margin-top: 0;
+  padding:10px;
+}
+.account-header h2{
+  margin-top: 0;
+}
+.account-header.facebook{
+  background: #6d84b4;
+  color: #fff;
+}
+.account-header.twitter{
+  background: #019ad2;
+  color: #fff;
+}
+.remove-feed{
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 20px;
+  color: #000;
+}
+.timeline-inverted .remove-feed{
+  right: 0;
+  left: auto;
+}
+.timeline {
+  list-style: none;
+  padding: 0 0 20px;
+  position: relative;
+  background: #fff;
+}
+.timeline > li {
+  position: relative;
+  width: 100%;
+  float: left;
+  clear: left;
+}
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+.timeline > li:after {
+  clear: both;
+}
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+.timeline > li:after {
+  clear: both;
+}
+.timeline > li > .timeline-panel {
+  width: 100%;
+  float: left;
+  border: 1px solid #d4d4d4;
+  position: relative;
+  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
+.timeline > li > .timeline-badge {
+  color: #fff;
+  width: 23px;
+  height: 24px;
+  line-height: 56px;
+  font-size: 1.4em;
+  text-align: center;
+  position: absolute;
+  top: 16px;
+  right: -12px;  
+  z-index: 1;
+
+}
+.timeline > li.timeline-inverted > .timeline-panel {
+  float: right;
+}
+.timeline > li.timeline-inverted > .timeline-panel:before {
+  border-left-width: 0;
+  border-right-width: 15px;
+  left: -15px;
+  right: auto;
+}
+.timeline > li.timeline-inverted > .timeline-panel:after {
+  border-left-width: 0;
+  border-right-width: 14px;
+  left: -14px;
+  right: auto;
+}
+.timeline-badge > a {
+  color: #C5C7C5 !important;
+}
+.timeline-badge a:hover {
+  color: #000 !important;
+}
+.timeline-title {
+  margin-top: 0;
+  color: inherit;
+}
+.timeline-body > p,
+.timeline-body > ul {
+    padding:10px;
+    margin-bottom: 0;
+    text-align: right;
+}
+.timeline-body > p + p {
+  margin-top: 5px;
+}
+.timeline-footer{
+    padding:20px;
+    background-color:#f4f4f4;
+}
+.timeline-footer > a{
+    cursor: pointer;
+    text-decoration: none;
+}
+.tooltip{
+
+    position:absolute;
+    z-index:1020;
+    display:block;
+    visibility:visible;
+    padding:5px;
+    font-size:11px;
+    
+}
+.tooltip.top{
+    margin-top:-2px;
+}
+.tooltip.right{
+    margin-left:2px;
+}
+.tooltip.bottom{
+    margin-top:2px;
+}
+.tooltip.left{
+    margin-left:-2px;
+}
+.tooltip.top .tooltip-arrow{
+    bottom:0;
+    left:0;
+    margin-left:0;
+    border-left:0 solid transparent;
+    border-right:5px solid transparent;
+    border-top:0 solid #000;
+}
+.tooltip.left .tooltip-arrow{
+    bottom:0;
+    left:0;
+    margin-left:0;
+    border-left:0 solid transparent;
+    border-right:5px solid transparent;
+    border-top:0 solid #000;
+}
+.tooltip.bottom .tooltip-arrow{
+    bottom:0;
+    left:0;
+    margin-left:0;
+    border-left:0 solid transparent;
+    border-right:5px solid transparent;
+    border-top:0 solid #000;
+}
+.tooltip.right .tooltip-arrow{
+    bottom:0;
+    left:0;
+    margin-left:0;
+    border-left:0 solid transparent;
+    border-right:5px solid transparent;
+    border-top:0 solid #000;
+}
+.tooltip-inner{
+    width:200px;
+    padding:3px 8px;
+    color:#fff;
+    text-align:center;
+    text-decoration:none;
+    background-color:#313131;
+    -webkit-border-radius:0px;
+    -moz-border-radius:0px;
+    border-radius:0px;
+}
+.tooltip-arrow{
+    position:absolute;
+    width:0;
+    height:0;
+}
+.timeline > li.timeline-inverted{
+  float: right; 
+  clear: right;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.timeline > li{
+  margin-bottom: 20px;
+}
+.timeline > li.timeline-inverted > .timeline-badge{
+  left: -12px;
+}
+
+@media (max-width: 767px) {
+    ul.timeline:before {
+        left: 40px;
+    }
+
+    ul.timeline > li {
+      margin-bottom: 20px;
+      position: relative;
+      width:100%;
+      float: left;
+      clear: left;
+    }
+    ul.timeline > li > .timeline-panel {
+        width: calc(100% - 90px);
+        width: -moz-calc(100% - 90px);
+        width: -webkit-calc(100% - 90px);
+    }
+
+    ul.timeline > li > .timeline-badge {
+        left: 28px;
+        margin-left: 0;
+        top: 16px;
+    }
+
+    ul.timeline > li > .timeline-panel {
+        float: right;
+    }
+
+        ul.timeline > li > .timeline-panel:before {
+            border-left-width: 0;
+            border-right-width: 15px;
+            left: -15px;
+            right: auto;
+        }
+
+        ul.timeline > li > .timeline-panel:after {
+            border-left-width: 0;
+            border-right-width: 14px;
+            left: -14px;
+            right: auto;
+        }
+    
+.timeline > li.timeline-inverted{
+  float: left; 
+  clear: left;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.timeline > li.timeline-inverted > .timeline-badge{
+  left: 28px;
+}
 }
