--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,19 @@ a.active{
 .accounts > ul > li.active a{
 	color: #fff;
 }
+.selected-accounts h5{
+  margin-left: 30px;
+}
+.selected-accounts{
+  visibility: hidden;
+  -webkit-transition: all 0.5s; 
+  -moz-transition: all 0.5s; 
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.selected-accounts.active{
+  visibility: visible;
+}
 .accounts .acc-groups ul,
 .selected-accounts ul{
 	list-style: none;
@@ -129,6 +142,7 @@ a.active{
 	-webkit-transition: all 0.5s; 
 	-moz-transition: all 0.5s; 
 	-o-transition: all 0.5s;
+  transition: all 0.5s;
 }
 .accounts .acc-groups ul li,
 .selected-accounts ul li{
